@@ -439,7 +439,9 @@ typedef enum {
 	SQL_BINARY,
 	SQL_REGEXP,
 	SQL_SENSITIVE_LIKE,
-	SQL_INSENSITIVE_LIKE
+	SQL_INSENSITIVE_LIKE,
+	SQL_ENCODE_ESCAPE
+		
 } sql_fragment_t;
 
 
