@@ -849,15 +849,21 @@ char * imap_cleanup_address(const char *a)
 	inptr = a;
 	prev = *a;
 	
+	// eat whitespace
 	while (*inptr && (*inptr == ' ' || *inptr == '\t')) {
 		g_string_append_c(s,*inptr);	
 		inptr++;
 	}
 	
+	// quote encoded string
 	if (*inptr == '=') {
 		g_string_append_c(s,'"');
 		
 		while (*inptr && *inptr != ' ' && *inptr != '\t' && *inptr!='<') {
+			if (*inptr == '"') {
+				inptr++;
+				continue;
+			}
 			g_string_append_c(s,*inptr);
 			prev = *inptr;
 			inptr++;
